Auto-commit (feature/Bruker-ADMIN) - 2025-12-15 09:08